
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
   162: AstroFloyd, 08/06/2011
     - plotmdl: added read_chosen_mdl()
     - Added plotmdln_new.f90 to start using mdl_functions
     
   161: AstroFloyd, 08/06/2011
     - plotplt:
       - replace Ebind contribution ratios by their absolute values
       - fix memory allocation when reading different model
       - fix double-axes plotted for logarithmic Kippenhahn plot
       
   160: AstroFloyd, 01/06/2011
     - plotplt: renamed variables 157, 158
     
   159: AstroFloyd, 26/05/2011
     - plotplt: added variables 152-158 for envelope binding energy
     - Added rename_plt2mass to svn
     
   158: AstroFloyd, 27/04/2011
     - Fixed small bug in array allocation when continously updating a plot with plotplt
     
   157: AstroFloyd, 08/04/2011
     - Changed type of lgx,lgy from integer to logical
     
   156: AstroFloyd, 08/04/2011
     - Finally fixed the bug that wouldn't allow plotting a log(t_f-t) structure plot:
       - dat(), not xx(),yy(), is passed to plt_convection(), which not logged
       - call it dat0(), copy it to dat() and log when necessary
   
   155: AstroFloyd, 23/03/2011
     - Added intent statements and Doxygen comments
     
   154: AstroFloyd, 23/03/2011
     - Minor updates
     
   153: AstroFloyd, 22/03/2011
     - Added the 9 new plotting variables that are in the plt[12] file since yesterday 
       (Rev.1373) + 2 older ones:
       - 82-83: Pc; Prot,c; 84-87: BE terms, 88-89: Sc; S@T=1e5K; 90-91: Rhe; Rco, 92: STRMDL
     - Always read .plt[12] files unformatted
     - Use Ebind rather than Ubind consistently
     
   152: AstroFloyd, 22/03/2011
     - plotplt: added variable 223: Winds
     - plt_functions: clean up/comment
     
   150: AstroFloyd, 11/01/2011
     - Updated Doxyfile
     
   149: AstroFloyd, 11/01/2011
     - Updated CMake files for release: 